2010-10-26  Charlie Zender  <zender@uci.edu>

	* Change nco_cnv_ccm_ccsm_cf_date() to handle date variable 
	in output var list as either NC_INT or NC_DOUBLE.
	Necessitated because nco_cnv_ccm_ccsm_cf_date() is called when
	"date" may be stored as double to facilitate averaging.
	This has been the case for many years, since packing introduced?
	So TODO nco998 appears to be an _old_ bug.
	Now seems to work. Test with
	ncra -O -v nbdate,date,time -p ~/nco/data in.nc ~/foo.nc
	ncks -H -m -v 'date.*' ~/foo.nc

	* Change date in in.cdl to better test YYMMDD averaging

	* Change ncra from rank preserving arithmetic operator to not one
	This allows ncra to average date and helps fix TODO nco998

	* NCO compiles and executes error-and-warning-free with clang

	* Small syntax changes for clang-compliance

2010-10-19  Charlie Zender  <zender@uci.edu>

	* Merge first half of ncbo.c 4.0.5 into mpncbo.c

2010-10-17  Charlie Zender  <zender@uci.edu>

	* NCO 4.0.6 release procedure:
 	Changes since nco-4_0_5: fxm
	cd ~/nco;cvs tag -d nco-4_0_6;cvs tag -d nco-4_0_6-1
	cd ~/nco;cvs commit -m "Preparing nco-4.0.6 release"
	cvs tag -c nco-4_0_6;cvs tag -c nco-4_0_6-1

	* Fix typos and missing semi-colons in ncap2 docs

2010-10-13  Charlie Zender  <zender@uci.edu>

	* Revert comment mangled by rx in nco_netcdf.c

	* NCO 4.0.5 release procedure:
 	Changes since nco-4_0_4: fix ncks hyp NC4 bug, ncra CF crd bug
	cd ~/nco;cvs tag -d nco-4_0_5;cvs tag -d nco-4_0_5-1
	cd ~/nco;cvs commit -m "Preparing nco-4.0.5 release"
	cvs tag -c nco-4_0_5;cvs tag -c nco-4_0_5-1

	* Make buildpackage and pbuilder scripts use DEB_BUILD_OPTIONS

	* Revert to pre-20101007 behavior to NOT-translate two-character
	user-input string "\0" to NUL.

2010-10-12  Charlie Zender  <zender@uci.edu>

	* Change bld/Makefile defaults to NETCDF4=Y, UDUNITS2=Y

2010-10-11  Charlie Zender  <zender@uci.edu>

	* Alter builds to use Debian-supplied UDUnits2

	* Verify Debian builds netCDF4 and DAP-enabled NCO with libnetcdf6
